<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/month_total"
            android:textSize="@dimen/header_text"
            android:padding="@dimen/padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginStart="@dimen/side_margin"
            android:id="@+id/tv_header_amount_left"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintEnd_toStartOf="@+id/tv_header_amount_spent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <TextView
            android:text="@string/budget_remaining"
            android:textSize="@dimen/header_text"
            android:padding="@dimen/padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginStart="@dimen/side_margin"
            android:id="@+id/tv_data_amount_left"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_amount_left"
            app:layout_constraintEnd_toStartOf="@+id/tv_data_amount_spent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
    <TextView
            tools:text="$0.00"
            android:textSize="@dimen/header_text"
            android:padding="@dimen/padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_header_amount_spent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/tv_header_amount_left"
            android:layout_marginEnd="@dimen/side_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_header_amount_left"/>
    <TextView
            tools:text="$700.00"
            android:textSize="@dimen/header_text"
            android:padding="@dimen/padding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_data_amount_spent"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginEnd="@dimen/side_margin"
            app:layout_constraintStart_toEndOf="@+id/tv_data_amount_left"
            app:layout_constraintTop_toTopOf="@+id/tv_data_amount_left"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/btn_view_receipts"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/secondaryButtonColor"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/bt_view_receipts"
            android:elevation="4dp"
            app:layout_constraintStart_toEndOf="@+id/bt_add_receipt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bt_add_receipt"/>
    <Button
            android:text="@string/btn_add_receipt"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorAccent"
            android:textColor="#FFFF"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/bt_add_receipt"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_view_receipts"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>