<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddReceipt">

    <TextView
            android:text="@string/receipt_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_text"
            android:id="@+id/tv_receipt_amount"
            app:layout_constraintStart_toStartOf="@+id/et_receipt_amount"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_text"
            android:id="@+id/tv_store_label"
            app:layout_constraintStart_toEndOf="@+id/et_receipt_amount"
            app:layout_constraintTop_toTopOf="@+id/tv_receipt_amount"/>
    <Button
            android:text="@string/btn_add_receipt"
            style="?android:borderlessButtonStyle"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/secondaryButtonColor"
            android:elevation="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:id="@+id/bt_submit_receipt"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@+id/sp_store_selector"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/side_margin"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:textAlignment="center"
            android:id="@+id/sp_store_selector"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/et_receipt_amount"
            app:layout_constraintBottom_toBottomOf="@+id/et_receipt_amount"
            app:layout_constraintStart_toEndOf="@+id/et_receipt_amount" app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/et_receipt_amount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin_top"
            app:layout_constraintTop_toBottomOf="@+id/tv_receipt_amount"
            app:layout_constraintEnd_toStartOf="@+id/sp_store_selector"
            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
</android.support.constraint.ConstraintLayout>